--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -19,5 +19,5 @@ jobs:
       - run: docker build --target app -t Lenny606/php-docker:1.0 -f ./infrastructure/php/Dockerfile .
       - run: docker build -t Lenny606/nginx-docker:1.0 -f ./infrastructure/nginx/Dockerfile .
       - run: docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
-      - run: docker push -u Lenny606/php-docker:1.0
-      - run: docker push -u Lenny606/nginx-docker:1.0
+      - run: docker push Lenny606/php-docker:1.0
+      - run: docker push Lenny606/nginx-docker:1.0
